// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Snapshot > рендерится в disabled состоянии 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        disabled=""
        placeholder="Disabled input"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится как required 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-foreground"
    >
      Email Address
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        required=""
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с error 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 border-destructive focus-visible:ring-destructive"
        type="text"
      />
    </div>
    <p
      class="text-xs text-destructive"
    >
      Invalid email
    </p>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с label 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-foreground"
    >
      Email Address
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с label и id 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-foreground"
      for="email"
    >
      Email Address
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="email"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с placeholder 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        placeholder="Enter text"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с кастомными классами 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 bg-blue-50"
        placeholder="Custom styled"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с типом email 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-foreground"
    >
      Email
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        type="email"
      />
    </div>
  </div>
</div>
`;

exports[`Input Snapshot > рендерится с типом password 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-foreground"
    >
      Password
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        type="password"
      />
    </div>
  </div>
</div>
`;
